# momuma-gtk

./: .gitmodules  CONTRIBUTING.md  README.md  meson.build  momuma-gtk.sublime-project
docs/: meson.build  momuma.1
include/: Application.h  ApplicationInterface.h  Gui.h  Pages.h  misc.h
include/Gui/: PlaylistNotebook.h  TopWidget.h  VolumeButton.h  functions.h
po/: LINGUAS  POTFILES.in  he.po  ru.po
src/: Application-public-API.cpp  Application.cpp  Pages.cpp  main.cpp  meson.build  misc.cpp
src/Gui/: AudioPlayerControls.cpp  ListChooserDialog.cpp  MasterWindow.cpp  PlaylistNotebook.cpp  Slider.cpp  VolumeButton.cpp  functions.cpp
